--- a/src/ale/Cluster.Rmd
+++ b/src/ale/Cluster.Rmd
@@ -14,7 +14,13 @@ seed=2024
 
 ```{r}
 numeric_data<-readRDS("../../data/data_numeric_cleaned2.RData")
-numeric_red<-numeric_data[,-c(5,11,12,13)]
+#numeric_red<-numeric_data[,-c(5,11,12,13)]
+ min_max_normalize <- function(x) {
+    return((x - min(x)) / (max(x) - min(x)))
+  }
+numeric_data$duration<- min_max_normalize(numeric_data$duration)
+numeric_data$year<- min_max_normalize(numeric_data$year)
+numeric_red<-numeric_data[,-13]
 
 ```
 
@@ -23,13 +29,13 @@ numeric_red<-numeric_data[,-c(5,11,12,13)]
 
 ```{r}
 
-data_MCD<-numeric_red[,-5]
+data_MCD<-numeric_red
 set.seed(seed)
 library(robustbase)
 fit_MCD <- covMcd(x = data_MCD, 
                   alpha = .75,
                   nsamp = "best") 
-p<-11
+p<-12
 ind_best <-
   which(
     mahalanobis(
@@ -40,7 +46,6 @@ ind_best <-
   )
 ind_out<-setdiff(1:nrow(numeric_red),ind_best)
 
-cleaned<-data_MCD[-ind_out, ]
 numeric_red_cleaned<-numeric_red[-ind_out,]
 ```
 
@@ -87,7 +92,7 @@ plot(data.w, main=paste(distance, ' - ', linkages[4]), hang=-0.1, xlab='', label
 
 ```{r}
 #cut dendogram:
-k=2
+k=3
 data.hc<-data.w
 clusters <- cutree(data.hc, k=k)
 
@@ -98,7 +103,86 @@ table(clusters)
 
 
 ```{r}
-numeric_red$cluster<-clusters
+numeric_red$cluster<-as.factor(clusters)
+```
+
+
+## Feature selection to improve clusters
+```{r}
+
+
+library(caret)
+library(randomForest)
+
+# Create a control object for rfe with random forest as the underlying model
+ctrl <- rfeControl(functions=rfFuncs, method="cv", number=10)
+
+# Perform Recursive Feature Elimination (RFE)
+result <- rfe(numeric_red[, -13], 
+              numeric_red[, 13], 
+              sizes=c(1:12), 
+              rfeControl=ctrl)
+
+# Print the results
+print(result)
+
+# Get the best set of features
+best_features <- result$optVariables
+
+```
+
+## Redo clusters
+```{r}
+
+subset<-numeric_red[,best_features]
+
+library(StatMatch)
+n<-dim(subset)[1]
+p<-dim(subset)[2]
+distance <- 'canberra' # manhattan, canberra
+linkages <- c('single', 'average', 'complete', 'ward.D2')
+
+# distance matrix:
+data.dist_e <- dist(subset, method=distance)
+#data.dist<-mahalanobis.dist(numeric_red)
+#temp<-dist(data.dist)
+# plot:
+#image(1:n,1:n, as.matrix(data.dist), main=paste('metrics: ', distance), asp=1, xlab='', ylab='')
+
+
+# perform hierarchical clustering:
+#data.s <- hclust(data.dist, method=linkages[1])
+#data.a <- hclust(data.dist, method=linkages[2])
+#data.c <- hclust(data.dist, method=linkages[3])
+#data.w <- hclust(data.dist, method=linkages[4])
+
+# perform hierarchical clustering maha:
+data.s <- hclust(data.dist_e, method=linkages[1])
+data.a <- hclust(data.dist_e, method=linkages[2])
+data.c <- hclust(data.dist_e, method=linkages[3])
+data.w <- hclust(data.dist_e, method=linkages[4])
+
+# plot dendograms:
+quartz()
+par(mfrow=c(2,2))
+
+plot(data.s, main=paste(distance, ' - ', linkages[1]), hang=-0.1, xlab='', labels=F, cex=0.6, sub='')
+plot(data.a, main=paste(distance, ' - ', linkages[2]), hang=-0.1, xlab='', labels=F, cex=0.6, sub='')
+plot(data.c, main=paste(distance, ' - ', linkages[3]), hang=-0.1, xlab='', labels=F, cex=0.6, sub='')
+plot(data.w, main=paste(distance, ' - ', linkages[4]), hang=-0.1, xlab='', labels=F, cex=0.6, sub='')
+```
+
+```{r}
+#cut dendogram:
+k=3
+data.hc<-data.w
+clusters <- cutree(data.hc, k=k)
+
+
+#Dimension of the Clusters
+table(clusters)
+
+numeric_red$cluster<-as.factor(clusters)
 ```
 
 ## Assign people to clusters
@@ -156,7 +240,7 @@ summary(fit)
 residuals(fit)
 
 quartz()
-plot(fit)
+
 text(fit, use.n=T)
 
 predictions <- predict(fit, survey_data, type = "class")
@@ -202,7 +286,7 @@ best_rf_model <- rf_model$finalModel
 #indices <- sample(1:nrow(survey_data), 60)
 #train_data <- survey_data[indices, ]
 #test_data <- survey_data[-indices, ]
-fit_RF<-randomForest(as.factor(cluster) ~ ., data = survey_data, mtry=10, ntree=5000, replace=T)
+fit_RF<-randomForest(as.factor(cluster) ~ ., data = survey_data, mtry=9, ntree=5000, replace=T)
 
 #predictions <- predict(fit_RF, test_data, type = "class")
 #conf_matrix <- confusionMatrix(predictions, as.factor(test_data$cluster))
